# Argos

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  shell.nix
src/domain/analyzers/: __init__.py  gemini_analyzer.py
src/domain/models/: __init__.py  analyzer_registry.py  file_parser.py  knowledge_base.py  person_detector.py  result_saver.py
src/domain/parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/domain/savers/: __init__.py  json_saver.py
src/infrastructure/: __init__.py  config_loader.py
src/interfaces/: __init__.py  base_analyzer.py  base_detector.py  base_parser.py  base_saver.py  knowledge_base.py
src/models/: __init__.py  app_config.py  compliance_context.py  compliance_response.py  person_response.py
tests/: test_knowledge_base.py  test_main.py  test_savers.py
